--- a/src/DotNet/Reface.EventBus/package.nuspec
+++ b/src/DotNet/Reface.EventBus/package.nuspec
@@ -4,7 +4,7 @@
     <!--*-->
     <id>Reface.EventBus</id>
     <!--*-->
-    <version>3.0.0</version>
+    <version>3.0.1</version>
     <title>Reface.EventBus</title>
     <!--*-->
     <authors>ShimizuShiori</authors>
@@ -18,7 +18,9 @@
     <!--*-->
     <description>EventBus in C#</description>
     <!--*-->
-    <releaseNotes>将 .net 运行时改为 4.0</releaseNotes>
+    <releaseNotes>
+      + 添加验证，事件源不能为 null
+    </releaseNotes>
     <copyright>Copyright © HP Inc. 2019</copyright>
     <tags>
     </tags>
