优化了 DefaultEventBus 中的代码结构，重写了监听器排序的实现

--- a/src/DotNet/Reface.EventBus/Reface.EventBus.csproj
+++ b/src/DotNet/Reface.EventBus/Reface.EventBus.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IEventListener.cs" />
     <Compile Include="IEventListenerFinder.cs" />
     <Compile Include="IEventBus.cs" />
+    <Compile Include="IPrioritized.cs" />
     <Compile Include="ListenerInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
