--- a/src/DotNet/Demo/App.config
+++ b/src/DotNet/Demo/App.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="eventBus" type="Reface.EventBus.Configuration.EventBusSection, Reface.EventBus"/>
+  </configSections>
+  <eventBus>
+    <listeners>
+      <add type="Demo.Listeners.OnConsoleStarted02, Demo" />
+      <add type="Demo.Listeners.OnConsoleStarted01, Demo" />
+    </listeners>
+  </eventBus>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
