--- a/src/DotNet/Demo/Demo.csproj
+++ b/src/DotNet/Demo/Demo.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\ConsoleStarted.cs" />
+    <Compile Include="Listeners\OnConsoleStarted02.cs" />
+    <Compile Include="Listeners\OnConsoleStarted01.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
