将 Core 版本同步至与 Framework 相同的版本，并编写了与 ServiceCollection 的集成方法

--- a/src/Core/Reface.Core.EventBus/Demo/Demo.csproj
+++ b/src/Core/Reface.Core.EventBus/Demo/Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Reface.Core.EventBus.Autofac\Reface.Core.EventBus.Autofac.csproj" />
     <ProjectReference Include="..\Reface.Core.EventBus\Reface.Core.EventBus.csproj" />
   </ItemGroup>
 
