--- a/src/Core/Reface.Core.EventBus/Reface.Core.EventBus/Reface.Core.EventBus.csproj
+++ b/src/Core/Reface.Core.EventBus/Reface.Core.EventBus/Reface.Core.EventBus.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\GithubProjects\EventBus\src\Core\Reface.Core.EventBus\Reface.Core.EventBus\Reface.Core.EventBus.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+  </ItemGroup>
 
 </Project>
