--- a/src/DotNet/Reface.EventBus/package.nuspec
+++ b/src/DotNet/Reface.EventBus/package.nuspec
@@ -4,7 +4,7 @@
     <!--*-->
     <id>Reface.EventBus</id>
     <!--*-->
-    <version>3.2.5</version>
+    <version>3.2.6</version>
     <title>Reface.EventBus</title>
     <!--*-->
     <authors>Felix</authors>
@@ -18,7 +18,7 @@
     <!--*-->
     <description>EventBus in C#</description>
     <!--*-->
-    <copyright>Copyright © HP Inc. 2019</copyright>
+    <copyright>Copyright 2019</copyright>
     <tags>
     </tags>
     <dependencies>
