修复了未设优先级的监听器默认优先级为 0 的BUG

--- a/src/DotNet/Demo.Autofac/Demo.Autofac.csproj
+++ b/src/DotNet/Demo.Autofac/Demo.Autofac.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutofacEventListenerFinder.cs" />
+    <Compile Include="CmdProcess.cs" />
+    <Compile Include="Events\CommandReadEvent.cs" />
     <Compile Include="Events\ConsoleStarted.cs" />
     <Compile Include="Listeners\OnConsoleStarted01.cs" />
     <Compile Include="Listeners\OnConsoleStarted02.cs" />
