添加了弱关联的事件发布

--- a/src/DotNet/Demo.Autofac/Demo.Autofac.csproj
+++ b/src/DotNet/Demo.Autofac/Demo.Autofac.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CmdProcess.cs" />
     <Compile Include="Events\CommandReadEvent.cs" />
     <Compile Include="Events\ConsoleStarted.cs" />
+    <Compile Include="Listeners\Echo.cs" />
     <Compile Include="Listeners\OnConsoleStarted01.cs" />
     <Compile Include="Listeners\OnConsoleStarted02.cs" />
     <Compile Include="Listeners\OnUserCreated.cs" />
