--- a/src/DotNet/Reface.EventBus/package.nuspec
+++ b/src/DotNet/Reface.EventBus/package.nuspec
@@ -1,30 +1,18 @@
 <?xml version="1.0"?>
-<package>
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <!--*-->
     <id>Reface.EventBus</id>
-    <!--*-->
-    <version>3.2.7</version>
+    <version>3.3.0</version>
     <title>Reface.EventBus</title>
-    <!--*-->
     <authors>Felix</authors>
     <owners>Felix</owners>
     <licenseUrl>https://github.com/ShimizuShiori/EventBus/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/ShimizuShiori/EventBus</projectUrl>
-    <!--
-    <iconUrl></iconUrl>
--->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <!--*-->
     <description>EventBus in C#</description>
-    <!--*-->
-    <copyright>Copyright 2019</copyright>
-    <tags>
-    </tags>
+    <copyright>Copyright © 2002 Felix. All rights reserved.</copyright>
     <dependencies>
-      <!--
-      <dependency id="SampleDependency" version="1.0" />
--->
+      <dependency id="TinyMapper" version="[3.0.3]"/>
     </dependencies>
   </metadata>
 </package>
